# Plume-cli

./: .env-template  .gitignore  Cargo.toml  README.md
src/: colors.rs  commands.rs  configs.rs  main.rs
src/receiver/: mod.rs
